[gd_scene load_steps=7 format=3 uid="uid://dgb5jjsoqkkw1"]

[ext_resource type="Script" uid="uid://dxp044cv0ik1q" path="res://menu.gd" id="1_06t4h"]
[ext_resource type="Texture2D" uid="uid://cxwk4ienbmuxe" path="res://assets/Menu/Button.webp" id="2_7vrkn"]
[ext_resource type="Texture2D" uid="uid://cr4uh68pkcd52" path="res://assets/Menu/Menu_Backdrop.webp" id="2_glbon"]
[ext_resource type="AudioStream" uid="uid://001nhr1rcod7" path="res://assets/Menu/Click.wav" id="3_fu7sn"]
[ext_resource type="Script" uid="uid://mvrlyvmescff" path="res://globalvar.gd" id="4_jix8l"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_06t4h"]

[node name="main_menu" type="Node2D"]
script = ExtResource("1_06t4h")

[node name="title_game_name" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="title_game_name"]
position = Vector2(570, 114)
scale = Vector2(452.25, 123.75)
texture = SubResource("PlaceholderTexture2D_06t4h")

[node name="bg" type="Node2D" parent="."]

[node name="MenuBackdrop" type="Sprite2D" parent="bg"]
z_index = -12
position = Vector2(579, 322)
texture = ExtResource("2_glbon")

[node name="start_balance" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="start_balance"]
position = Vector2(570, 282)
scale = Vector2(0.525259, 0.525259)
texture = ExtResource("2_7vrkn")

[node name="Button" type="Button" parent="start_balance"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.475
anchor_top = -0.55
anchor_right = 0.475
anchor_bottom = 0.45
offset_left = 392.0
offset_top = 241.0
offset_right = 710.0
offset_bottom = 314.0
theme_override_font_sizes/font_size = 40
text = "START BALANCE"
flat = true
metadata/_edit_use_anchors_ = true

[node name="credits" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="credits"]
position = Vector2(568.75, 419.75)
scale = Vector2(0.525259, 0.525259)
texture = ExtResource("2_7vrkn")

[node name="Button" type="Button" parent="credits"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.44375
anchor_top = 2.89375
anchor_right = 0.44375
anchor_bottom = 3.89375
offset_left = 392.0
offset_top = 241.0
offset_right = 710.0
offset_bottom = 314.0
theme_override_font_sizes/font_size = 40
text = "credits"
flat = true
metadata/_edit_use_anchors_ = true

[node name="end" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="end"]
position = Vector2(567.75, 564.75)
scale = Vector2(0.525259, 0.525259)
texture = ExtResource("2_7vrkn")

[node name="Button" type="Button" parent="end"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.41875
anchor_top = 6.51875
anchor_right = 0.41875
anchor_bottom = 7.51875
offset_left = 392.0
offset_top = 241.0
offset_right = 710.0
offset_bottom = 314.0
theme_override_font_sizes/font_size = 40
text = "exit"
flat = true
metadata/_edit_use_anchors_ = true

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fu7sn")
volume_db = -29.884
pitch_scale = 0.5
max_polyphony = 3
playback_type = 1

[node name="globalvar" type="Node2D" parent="."]
script = ExtResource("4_jix8l")

[connection signal="mouse_entered" from="start_balance/Button" to="." method="_on_button_mouse_touched_button_play"]
[connection signal="pressed" from="start_balance/Button" to="." method="_on_button_pressed_start"]
[connection signal="mouse_entered" from="credits/Button" to="." method="_on_button_mouse_touched_button_credits"]
[connection signal="pressed" from="credits/Button" to="." method="_on_button_pressed_credits"]
[connection signal="mouse_entered" from="end/Button" to="." method="_on_button_mouse_touched_button_exit"]
[connection signal="pressed" from="end/Button" to="." method="_on_button_pressed_end"]
